# tasks_theory_schedules

./: CMakeLists.txt  MainWindow.h  main.cpp  main_window.cpp
common/: algo.h  common.h  config.h
logger/: logger.cpp  logger.h
solution/: hungarian.cpp  hungarian.h
table/: table.cpp  table.h
